# CYOA-Manager

./: .gitignore  LICENSE  README.md  TODO.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: release.yml
public/: sample.json  zip_link_catalog_data.js
public/viewers/ICC Original/: index.html
public/viewers/ICC Original/js/: app.c533aa25.js  working.js
public/viewers/Om1cr0n/: index.html
public/viewers/Om1cr0n/assets/: index-D6pAeUf0.css  index-cEorXV3W.js
save/: library.json
scripts/: package-portable.ps1
src/: App.vue  types.ts  viewers.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  library.rs  main.rs  models.rs  perk_index.rs  protocol.rs  viewer_overlay.html  viewer_overlay.js
src/components/: AddProjectDialog.vue  BulkImportDialog.vue  DownloadProjectDialog.vue  EditProjectDialog.vue  OversizeActionPrompt.vue  PerkCard.vue  ProgressBar.vue  ProjectCard.vue  RelinkDialog.vue
src/composables/: useLibrary.ts  useSettings.ts
src/router/: index.ts
src/views/: CatalogView.vue  LibraryView.vue  PerkSearchView.vue  SettingsView.vue
